// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CommentForm /> should match its empty snapshot 1`] = `
<div
  className="sc-bwzfXH qriYw k-CommentForm"
>
  <div
    className="k-CommentForm__image"
  >
    <img
      alt="Image alt"
      src="#image"
    />
  </div>
  <div
    className="k-CommentForm__form"
  >
    <textarea
      aria-describedby="custom-textarea-id-description"
      aria-label="Leave a comment"
      className="k-CommentForm__textarea"
      defaultValue=""
      disabled={false}
      id="custom-textarea-id"
      onChange={[Function]}
      placeholder="Leave a comment on the project"
    />
    <span
      className="k-CommentForm__arrow"
    />
  </div>
</div>
`;

exports[`<CommentForm /> should match its error snapshot 1`] = `
<div
  className="sc-bwzfXH qriYw k-CommentForm"
>
  <div
    className="k-CommentForm__image"
  >
    <img
      alt="Image alt"
      src="#image"
    />
  </div>
  <div
    className="k-CommentForm__form"
  >
    <textarea
      aria-describedby="custom-textarea-id-description"
      aria-label="Leave a comment"
      className="k-CommentForm__textarea"
      defaultValue=""
      disabled={false}
      id="custom-textarea-id"
      onChange={[Function]}
      placeholder="Leave a comment on the project"
    />
    <span
      className="k-CommentForm__arrow"
    />
    <span
      className="k-u-color-error k-u-size-micro k-u-weight-regular k-CommentForm__error"
      id="custom-textarea-id-description"
    >
      Cum sociis natoque penatibus et magnis
    </span>
  </div>
</div>
`;
